[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "screen_games"
version = "0.0.3"
authors = [
    { name="timcsy", email="timocsy@yahoo.com.tw" },
]
description = "Connect your PC screen and keyboard, mouse event to OpenAI Gym!"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "gymnasium>=0.28",
	"eventstreaming>=0.0.3",
    "python-dotenv>=0.19",
]

[project.urls]
"Homepage" = "https://github.com/timcsy/screen_games"
"Bug Tracker" = "https://github.com/timcsy/screen_games/issues"

[project.scripts]
